# src/main/java/com/tripiz/api/service/ItineraryService.java
@@ -1,7 +1,9 @@
 package com.tripiz.api.service;
 
+import com.tripiz.api.domain.Bus;
 import com.tripiz.api.domain.Direction;
 import com.tripiz.api.domain.Itinerary;
+import com.tripiz.api.domain.Station;
 import com.tripiz.api.model.CreateItineraryRequestDTO;
 import com.tripiz.api.model.ItineraryResponseDTO;
 import com.tripiz.api.repository.ItineraryRepository;
@@ -10,6 +12,7 @@ import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -50,4 +53,27 @@ public class ItineraryService {
         return itineraryRepository.findByDepartureStation(stationId);
     }
 
+    public void updateItinerary(UUID id, CreateItineraryRequestDTO request) {
+        Itinerary itinerary = itineraryRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Itinerary not found"));
+
+        itineraryMapper.updateItineraryFromDto(request, itinerary);
+
+        itineraryRepository.save(itinerary);
+    }
+
+    public void deleteItinerary(UUID id) {
+        Itinerary itinerary = itineraryRepository.findById(id).orElseThrow(() -> new RuntimeException("Itinerary not found"));
+
+        itineraryRepository.delete(itinerary);
+    }
+
+    public List<ItineraryResponseDTO> getAllItineraries() {
+        List<Itinerary> itinerary = itineraryRepository.findAll();
+
+        if (itinerary.isEmpty()) {
+            return Collections.emptyList();
+        }
+        return itinerary.stream().map(itineraryMapper::toDTO).toList();
+    }
 }
